--- a/src/templates/_components/fieldtypes/ElementSource.twig
+++ b/src/templates/_components/fieldtypes/ElementSource.twig
@@ -1,1 +1,3 @@
+{% set elementInstance = craft.app.elements.createElement(elementType) %}
+{% set sortOptions = {field: 'Field Order'|t('elements-list')}|merge(elementInstance.sortOptions()) %}
 {% extends "nested-element-index/_elements/index" %}
