sortable input alterations

--- a/src/templates/_components/fieldtypes/settings.twig
+++ b/src/templates/_components/fieldtypes/settings.twig
@@ -4,7 +4,7 @@
 {% block advancedSettings %}
     {{ forms.lightswitchField({
         label: "Sortable"|t('element-lists'),
-        instructions: "Whether the field can be sorted"|t('element-lists'),
+        instructions: "Whether the field relations can be sorted."|t('element-lists'),
         id: 'sortable',
         name: 'sortable',
         enabled: field.sortable ? true : false,
