--- a/src/templates/_components/fieldtypes/settings.twig
+++ b/src/templates/_components/fieldtypes/settings.twig
@@ -1,5 +1,5 @@
 {% import "_includes/forms" as forms %}
-{% extends "_components/fieldtypes/elementfieldsettings" %}
+{% extends settingsTemplate %}
 
 {% block advancedSettings %}
     {{ forms.lightswitchField({
