--- a/src/templates/_components/fieldtypes/input.twig
+++ b/src/templates/_components/fieldtypes/input.twig
@@ -1,3 +1,3 @@
 {% set elementInstance = craft.app.elements.createElement(elementType) %}
-{% set sortOptions = {field: 'Field Order'|t('elements-list')}|merge(elementInstance.sortOptions()) %}
+{% set sortOptions = (fieldSortOptions ?? {})|merge(elementInstance.sortOptions()) %}
 {% extends "nested-element-index/_elements/index" %}
